--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="greetings">
-        <span>I</span>
-        <span>m</span>
+        <span>A</span>
+        <span>f</span>
+        <span>i</span>
+        <span>f</span>
         <span>a</span>
-        <span></span>
-        <span></span>
-        <span></span>
+        <span>h</span>
            </div>
     <div class="description">
         <span>aku punya hadiah buat kamu!</span>
